Changes for 1.7.1.1
* Fixed possible null pointer in color chooser for color property, which occurred when chosing the color for map text. (veqryn)


Changes for 1.7.0.1
* New attachment properties for Triggers, Politics, and User Actions: "chanceIncrementOnFailure" and "chanceDecrementOnSuccess" which will modify the "chance" value. (veqryn)

* Fixing fuelCost to not be charged for units in transports. (veqryn)

* Major changes to both the map and the placements and the rules for "Great War" world war one game. (veqryn)

* Implemented all sounds through IDelegateBridge.getSoundChannelBroadcaster().playSoundForAll() or through DefaultSoundChannel.playSoundOnLocalMachine() for a few local sounds like slapping in chat. (veqryn)

* Created new channel broadcaster for use with playing sounds on both server machine and client machines. (veqryn)

* Created user interface element for RandomStartDelegate, so that players can pick which territory they want and what units they want in it. (veqryn)

* Gave all AIs methods to pick territories, and they will attempt to focus on a single area of the board. (veqryn)

* Created new game option property, "Territories Are Assigned Randomly", which determines if territories are randomly assigned or picked by players during RandomStartDelegate. (veqryn)

* Created new delegate, "RandomStartDelegate", which will allow for randomly assigned territories or territories chosen in turn order. (veqryn)

* Fixed problem where territory names that were parseable integers could not allow any territory based conditions. I still recommend territories have a non integer character in them though. (veqryn) 

* Fixed null pointer error in signalGameOver when called by a trigger for a game that has never reached the end round step. (veqryn)

* Minor adjustment to retain capital produce number methods to allow a value of zero. (flaaargle)

* Created user interface element for the User Action Delegate, based on the existing politics interface. (veqryn)
